// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox checkbox: 0 1`] = `
<label
  className="checkbox"
>
  <input
    checked={false}
    className="checkbox_input"
    disabled={null}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_span"
  />
  <span
    className="checkbox_label"
  />
</label>
`;

exports[`checkbox checkbox: 1 1`] = `
<label
  className="checkbox"
>
  <input
    checked={false}
    className="checkbox_input"
    disabled={null}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_span"
  />
  <span
    className="checkbox_label"
  />
</label>
`;

exports[`checkbox checkbox: 2 1`] = `
<div
  className="checkbox"
>
  <input
    checked={false}
    className="checkbox_input"
    disabled={null}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_span"
  />
  <span
    className="checkbox_label"
  />
</div>
`;

exports[`checkbox checkbox: 3 1`] = `
<label
  className="checkbox"
>
  <input
    checked={false}
    className="checkbox_input"
    disabled={null}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_span"
  />
  <span
    className="checkbox_label"
  />
</label>
`;

exports[`checkbox checkbox: 4 1`] = `
<label
  className="checkbox"
>
  <input
    checked={true}
    className="checkbox_input"
    disabled={null}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_span"
  />
  <span
    className="checkbox_label"
  />
</label>
`;

exports[`checkbox checkbox: 5 1`] = `
<label
  className="checkbox"
>
  <input
    checked={false}
    className="checkbox_input"
    disabled={null}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_span"
  />
  <span
    className="checkbox_label"
  />
</label>
`;

exports[`checkbox checkbox: 6 1`] = `
<label
  className="checkbox checkbox_disabled"
>
  <input
    checked={false}
    className="checkbox_input"
    disabled={true}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_span"
  />
  <span
    className="checkbox_label"
  />
</label>
`;
